lista questions en add para test terminada con ops propias
