# swagger.yml
@@ -549,6 +549,96 @@ paths:
         500:
           $ref: '#/responses/InternalServerError'
 
+  /users/{username}/availableEditQuestions:
+    get:
+      security:
+        - BearerCookie: []
+      tags:
+      - user
+      summary: Returns all non-published questions that a teacher can add to a test
+      operationId: GetAvailableEditQuestionsOfUser
+      description: Returns all non-published questions that a teacher can add to a test
+      produces:
+      - application/json
+      parameters:
+      - in: path
+        name: username
+        description: Username of the user who is allowed to use the questions
+        required: true
+        type: string
+      - in: query
+        name: tags
+        type: array
+        collectionFormat: pipes
+        items:
+          type: array
+          collectionFormat: csv
+          items:
+            type: string
+      - in: query
+        name: likeTitle
+        type: string
+      responses:
+        200:
+          description: questions found
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Question'
+        400:
+          $ref: '#/responses/BadRequestError'
+        403:
+          $ref: '#/responses/ForbiddenError'
+        410:
+          $ref: '#/responses/GoneError'
+        500:
+          $ref: '#/responses/InternalServerError'
+
+  /users/{username}/availableQuestions:
+    get:
+      security:
+        - BearerCookie: []
+      tags:
+      - user
+      summary: Returns all questions that a teacher can add to a test
+      operationId: GetAvailableQuestionsOfUser
+      description: Returns all questions that a teacher can add to a test
+      produces:
+      - application/json
+      parameters:
+      - in: path
+        name: username
+        description: Username of the user who is allowed to use the questions
+        required: true
+        type: string
+      - in: query
+        name: tags
+        type: array
+        collectionFormat: pipes
+        items:
+          type: array
+          collectionFormat: csv
+          items:
+            type: string
+      - in: query
+        name: likeTitle
+        type: string
+      responses:
+        200:
+          description: questions found
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Question'
+        400:
+          $ref: '#/responses/BadRequestError'
+        403:
+          $ref: '#/responses/ForbiddenError'
+        410:
+          $ref: '#/responses/GoneError'
+        500:
+          $ref: '#/responses/InternalServerError'
+
   /users/{username}/sharedQuestions:
    get:
       security:
